--- a/roles/bootstrap-os/tasks/main.yml
+++ b/roles/bootstrap-os/tasks/main.yml
@@ -10,7 +10,9 @@
   when: '''ID="centos"'' in os_release.stdout_lines or ''ID="ol"'' in os_release.stdout_lines or ''ID="almalinux"'' in os_release.stdout_lines'
 
 - include_tasks: bootstrap-redhat.yml
-  when: '''ID="rhel"'' in os_release.stdout_lines'
+  when:
+    - '''ID="rhel"'' in os_release.stdout_lines'
+    - not airgapped_environment
 
 - include_tasks: bootstrap-clearlinux.yml
   when: '''ID=clear-linux-os'' in os_release.stdout_lines'
