--- a/cluster.yml
+++ b/cluster.yml
@@ -25,6 +25,10 @@
   tags: always
   import_playbook: facts.yml
 
+- name: copy offline files temporairily to remote nodes
+  import_playbook: copy-offline-files.yml
+  when: airgapped_environment 
+
 - hosts: k8s_cluster:etcd
   gather_facts: False
   any_errors_fatal: "{{ any_errors_fatal | default(true) }}"
@@ -132,3 +136,7 @@
   roles:
     - { role: kubespray-defaults }
     - { role: kubernetes/preinstall, when: "dns_mode != 'none' and resolvconf_mode == 'host_resolvconf'", tags: resolvconf, dns_late: true }
+
+- name: Delete offline files
+  import_playbook: delete-offline-files.yml
+  when: airgapped_environment 
